# lispy

./: README.md  pyproject.toml
docs/: README.md
examples/: aoc09.py  factorial.py  hello.py  primes.py  recall.py
lispy/: __init__.py  __main__.py
